external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_mut_2.exp
error[E01002]: unexpected token
   ┌─ tests/move_2024/matching/invalid_mut_2.move:11:28
   │
11 │             mut Maybe::Just<u64>(_) => (),
   │                            ^
   │                            │
   │                            Unexpected '<'
   │                            Expected '=>'

